don't display client shutdown on --upgrade or repair SERVER-554